fix layout issues in large screen

--- a/src/views/Home/components/NewReleaseItems/NewReleaseItems.module.scss
+++ b/src/views/Home/components/NewReleaseItems/NewReleaseItems.module.scss
@@ -3,4 +3,5 @@
   grid-template-columns: 30fr 30fr 30fr;
   justify-content: center;
   margin-top: 10px;
+  max-width: 1082px;
 }
